<resources>
    <string name="app_name">Mumbai Local</string>
    <string name="title_activity_login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_a_user">Not a user?</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">New User</string>
    <string name="done">Done</string>
    <string name="full_name">Full Name</string>
    <string name="title_activity_selection">Stations</string>
    <string name="harbour">Harbour</string>
    <string name="central">Central</string>
    <string name="western">Western</string>
    <string name="select_station">Selected line:</string>
    <string name="remember_me">Remember me</string>
    <string name="next">Next</string>
    <string name="payable_amount">Payable Amount:</string>
    <string name="left_indicator">Left Indicator</string>
    <string name="online_wallet">Online Wallet</string>
    <string name="credit_card">Credit Card</string>
    <string name="debit_card">Debit Card</string>
    <string name="counter">At Window</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="select_class">Select class</string>
    <string name="class1">Class</string>
    <string name="edit_details">Edit Details</string>
    <string name="passenger">No of passengers</string>
    <string name="pay">Pay</string>
    <string name="ticketing_booking">Ticketing Booking</string>
    <string name="platform_ticket">Platform Ticket</string>
    <string name="last_transactions">Transactions History</string>
    <string name="dashboard_activity_title">Dash Board</string>
    <string name="one">1</string>
    <string name="return_tic">Return Journey</string>
    <string name="paid_via">Paid via</string>
    <string name="amount">Amount</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="history">History</string>
    <string name="create_transactions_database">Create Transactions Database</string>
    <string name="create_users_database">Create Users Database</string>
    <string name="generated_on">Generated On</string>
    <string name="login_in">Login in</string>
    <string name="profile">Profile</string>
    <string name="add_balance">Add Balance</string>
    <string name="available_balance">Available Balance</string>
    <string name="name">Name</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="field_required">Field required</string>
</resources>
