<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/dBackground"
    android:layout_height="match_parent"
    tools:context="com.preons.pranav.mumbailocal.DetailsActivity">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="@dimen/dPadding"
            android:text="@string/edit_details"
            android:textAllCaps="false"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_light_background"
            android:orientation="vertical"
            android:padding="@dimen/dPadding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:padding="@dimen/dPadding"
                android:text="@string/select_class"
                android:textAllCaps="false"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored" />

            <RadioGroup
                android:checkedButton="1"
                android:id="@+id/class_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dPadding"
                android:layout_marginRight="@dimen/dPadding"
                android:orientation="horizontal"
                android:padding="@dimen/dPadding">

                <RadioButton
                    android:id="@+id/first"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_first"
                    android:drawablePadding="@dimen/dPadding"
                    android:drawableStart="@drawable/ic_first"
                    android:text="@string/class1" />

                <RadioButton
                    android:id="@+id/second"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_second"
                    android:drawablePadding="@dimen/dPadding"
                    android:drawableStart="@drawable/ic_second"
                    android:text="@string/class1" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:padding="@dimen/dPadding"
                android:text="@string/passenger"
                android:textAllCaps="false"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <SeekBar
                    android:id="@+id/no_of_passenger"
                    android:layout_weight="1"
                    android:max="9"
                    android:padding="@dimen/dPadding"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/progress"
                    android:gravity="center"
                    android:padding="@dimen/dPadding"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:text="@string/one"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/ret_tic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dPadding"
                android:padding="@dimen/dPadding"
                android:text="@string/return_tic" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/aPadding"
            android:background="@color/cardview_light_background"
            android:orientation="vertical"
            android:padding="@dimen/dPadding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:padding="@dimen/dPadding"
                android:text="@string/payable_amount"
                android:textAllCaps="false"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored" />

            <TextView
                android:id="@+id/amount"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/dPadding" />
        </LinearLayout>

        <Button
            android:id="@+id/reg_done"
            style="@style/dButton"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:onClick="done"
            android:text="@string/proceed_to_payment" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
