<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.preons.pranav.mumbailocal.PaymentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_light_background"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ticket_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/from"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/dPadding" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/left_indicator"
                    android:src="@mipmap/ic_left_arrow" />

                <TextView
                    android:id="@+id/to"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/dPadding" />
            </LinearLayout>

            <TextView
                android:id="@+id/for_s"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_for"
                android:drawablePadding="@dimen/dPadding"
                android:drawableStart="@drawable/ic_for"
                android:gravity="center_vertical"
                android:padding="@dimen/dPadding"
                android:visibility="gone" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="@dimen/dPadding"
                    android:text="@string/payable_amount"
                    android:textColor="@color/colorAccent" />

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dPadding"
                    android:layout_weight="1"
                    android:textColor="@color/cardview_light_background"
                    android:id="@+id/amount"
                    android:background="#00e676"
                    android:gravity="center" />
            </LinearLayout>
        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="@dimen/dPadding"
            android:text="@string/select_payment_method"
            android:textAllCaps="false"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored" />

        <RadioGroup
            android:id="@+id/methods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_light_background"
            android:padding="@dimen/aPadding">

            <RadioButton
                android:id="@+id/cCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_card"
                android:drawablePadding="@dimen/dPadding"
                android:drawableStart="@drawable/ic_card"
                android:padding="@dimen/dPadding"
                android:text="@string/credit_card" />

            <RadioButton
                android:id="@+id/dCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_card"
                android:drawablePadding="@dimen/dPadding"
                android:drawableStart="@drawable/ic_card"
                android:padding="@dimen/dPadding"
                android:text="@string/debit_card" />

            <RadioButton
                android:id="@+id/on_wallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_wallet"
                android:drawablePadding="@dimen/dPadding"
                android:drawableStart="@drawable/ic_wallet"
                android:padding="@dimen/dPadding"
                android:text="@string/online_wallet" />

            <RadioButton
                android:id="@+id/counter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_counter"
                android:drawablePadding="@dimen/dPadding"
                android:drawableStart="@drawable/ic_counter"
                android:padding="@dimen/dPadding"
                android:text="@string/counter" />
        </RadioGroup>

        <Button
            android:id="@+id/pay"
            style="@style/dButton"
            android:onClick="done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/pay" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
