<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingTop="@dimen/aPadding"
    android:paddingBottom="@dimen/aPadding"
    android:layout_height="match_parent"
    android:background="@color/dBackground"
    tools:context="com.preons.pranav.mumbailocal.HistoryActivity"
    android:orientation="vertical">
    <TableLayout
        android:background="@color/cardview_light_background"
        android:padding="@dimen/dPadding"
        android:layout_marginBottom="@dimen/dPadding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow android:layout_width="match_parent">
            <TextView
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:padding="@dimen/dPadding"
                android:text="@string/name"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/name"
                android:layout_weight="1"
                android:layout_height="match_parent" />
        </TableRow>
        <TableRow>
            <TextView
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:padding="@dimen/dPadding"
                android:text="@string/available_balance"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:gravity="center_vertical"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_weight="1"
                android:id="@+id/balance"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_rupees"
                android:drawableStart="@drawable/ic_rupees" />
        </TableRow>
        <Button
            android:background="@color/colorAccent"
            android:layout_height="36dp"
            android:layout_margin="@dimen/dPadding"
            android:onClick="clicks"
            android:textColor="@color/cardview_light_background"
            android:text="@string/add_balance"/>
    </TableLayout>
    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="@dimen/dPadding"
        android:divider="@android:color/transparent" />

</LinearLayout>
